--- a/style/banner.scss
+++ b/style/banner.scss
@@ -1,5 +1,5 @@
 .banner {
-  background-image: url(/img/banner.webp);
+  background-image: url(./img/banner.webp);
   background-repeat: no-repeat;
   background-size: cover;
 
