image path for bundle changed

--- a/style/order.scss
+++ b/style/order.scss
@@ -1,5 +1,5 @@
 .order {
-  background-image: url(./img/BG.webp);
+  background-image: url(~img/BG.webp);
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #272833;
